@@ -31,7 +31,7 @@ TkDND - Tk Drag and Drop Interface
 <B>tkdnd::drop_target unregister</B><I> window</I>
 <P>
 
-<B>tkdnd::drag_source register</B><I> window ?type-list? ?mouse-button?</I>
+<B>tkdnd::drag_source register</B><I> window ?type-list? ?mouse-buttons?</I>
 <BR>
 
 <B>tkdnd::drag_source unregister</B><I> window</I>
@@ -88,7 +88,7 @@ This command will stop <I>window</I> from being a drop target.
 Thus, <I>window</I> will stop receiving events related to drop operations.
 It is an error to use this command for a <I>window</I> that has not been
 registered as a drop target with <B>tkdnd::drop_target register</B>.
-<DT><B>tkdnd::drag_source register</B><I> window ?type-list? ?mouse-button?</I><DD>
+<DT><B>tkdnd::drag_source register</B><I> window ?type-list? ?mouse-buttons?</I><DD>
 This command will register <I>window</I> as a drag source. A drag source is a
 widget than can start a drag action. <I>window</I> must exist when this command
 is executed and this command can be executed multiple times on a widget.
@@ -103,10 +103,11 @@ list is indicative/informative. <I>window</I> can initiate a drag action with
 even a different type list. If <I>type-list</I> is not specified, it defaults to
 the empty list.
 <P>
-Finally, <I>mouse-button</I> is the mouse button that will be used for starting
-the drag action. It can have any of the values 1 (left mouse button),
-2 (middle mouse button - wheel) and 3 (right mouse button).
-If <I>mouse-button</I> is not specified, it defaults to 1.
+Finally, <I>mouse-buttons</I> is one or more mouse buttons that will be used for
+starting the drag action. It can have any of the values &quot;1&quot; (left mouse
+button), &quot;2&quot; (middle mouse button - wheel) and &quot;3&quot; (right mouse button).  If
+<I>mouse-buttons</I> is not specified, it defaults to &quot;1&quot; (left mouse button).
+Multiple mouse buttons can be specified as a list of values (i.e. {1 3}).
 <DT><B>tkdnd::drag_source unregister</B><I> window</I><DD>
 This command will stop <I>window</I> from being a drag source.
 Thus, <I>window</I> will stop receiving events related to drag operations.
@@ -527,6 +528,6 @@ dnd, drag and drop
 This document was created by
 <A HREF="/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 22:24:05 GMT, July 13, 2019
+Time: 10:56:09 GMT, July 15, 2019
 </BODY>
 </HTML>
